# clawhermes

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  GITHUB_DEPLOY.md  LICENSE  README.md  RELEASE.md  RENDER_DEPLOY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json  railway.toml  render.yaml  setup_env.ps1  start_all.ps1  start_chat.ps1  test_agent.py  test_api.py  快速启动.md
.github/workflows/: ci.yml  deploy-pages.yml
config/: .env.example  README.md  config.yaml.example
config/agents/default/: AGENTS.md.example  SOUL.md.example  config.json.example
config/channels/: discord.yaml.example  feishu.yaml.example  qq.yaml.example  slack.yaml.example  wechat.yaml.example
config/providers/: deepseek.yaml.example
docs/: PRD.md  api-contract.md  architecture.md  comparison.md  data-model.md  deployment.md  development-plan.md  development.md  env-reference.md  index.md  sequence-diagrams.md
scripts/: install.sh
src/clawhermes/: cli.py  config.py  types.py
src/clawhermes/agent/: ace.py  agent_mgr.py  context.py  delegate.py  exceptions.py  loop.py  memory.py  prompt.py  scheduler.py  session.py
tests/: mock_provider.py  test_ace.py  test_all.py  test_channel.py  test_cli.py  test_feishu_adapter.py  test_integration.py  test_mcp_client.py  test_pairing.py  test_sandbox.py  test_scheduler.py  test_skill_hub.py  test_types.py  test_unit_extended.py  test_wechat_adapter.py
web/: README.md  index.html  server.py  start.py  start_frontend.ps1  test.html
web/css/: style.css
web/js/: app.js
(+19 files in other folders)
