[project]
name = "clawhermes"
version = "0.15.0"
description = "融合 Hermes 自进化能力与 OpenClaw Gateway 体系的 Python AI Agent 框架"
requires-python = ">=3.12"
authors = [
    {name = "brekov"},
]

dependencies = [
    # === LLM 编排 ===
    "litellm>=1.40",

    # === Web/API ===
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx>=0.28",

    # === 存储 ===
    "chromadb>=0.6",

    # === 配置 ===
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "pyyaml>=6.0",

    # === CLI ===
    "rich>=13.0",
    "questionary>=2.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.15",
    "ruff>=0.11",
    "pre-commit>=4.0",
]
redis = ["redis>=5.0"]

[project.scripts]
clawhermes = "clawhermes.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
